# llm-inference-recipe-lab

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
benchmarks/: README.md  adapters.py  fp16_baseline.py  sample_prompts.jsonl
engines/: README.md
recipes/: README.md  w8a8_ptq_recipe.yaml
tests/: README.md  test_fp16_baseline.py
tools/: README.md  make_calibration_stub.py
