[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-inference-recipe-lab"
version = "0.1.0"
description = "Recipe-driven PTQ/QAT/sparsity inference prototyping lab"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "LLM Inference Recipe Lab" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
